featured product on main page

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "serve-static": "^1.15.0",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
+    "vue3-carousel": "^0.2.14",
     "vuex": "^4.0.2"
   },
   "devDependencies": {
